php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #32116 mysql_connect() - client_flags broken
Submitted: 2005-02-25 23:09 UTC Modified: 2005-05-09 14:17 UTC
Votes:2
Avg. Score:5.0 ± 0.0
Reproduced:2 of 2 (100.0%)
Same Version:2 (100.0%)
Same OS:2 (100.0%)
From: mstuhu at web dot de Assigned: georg (profile)
Status: Closed Package: MySQL related
PHP Version: 4.3.10 OS: Windows 2000
Private report: No CVE-ID: None
 [2005-02-25 23:09 UTC] mstuhu at web dot de
Description:
------------
None of the function calls below does establish a compressed connection to a remote mySQL 4.0.21 server:

mysql_connect($server, $user, $password, false, 32);
mysql_connect($server, $user, $password, false, MYSQL_CLIENT_COMPRESS);
mysql_connect($server, $user, $password, false, CLIENT_COMPRESS);

There's neither a performance boost using these calls nor is the connection crippled (verified with Etherreal)

Interestingly establishing a compressed connection from a Linux box with 4.3.10 to the remote mySQL server works fine.

So I suppose there's a bug in the mySQL windows client libs which the mysql_connect function relies on.


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2005-02-27 14:42 UTC] sniper@php.net
Looks a lot like the whole compression thingie is disabled
for windows for some reason:

config-win.h:/* #define HAVE_COMPRESS     -- not with PHP, please */ 


 [2005-03-14 22:03 UTC] sniper@php.net
Georg, can you find out why this is disabled on windows?
The CVS commit message(s) didn't reveal anything useful..

 [2005-05-09 14:17 UTC] georg@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 18:00:01 2026 UTC