fix for bug #32116 (mysql compressed connection doesn't work under win)